testdata/explorer/configMap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: blockscout
data:
  # L1_EXPLORER_ENDPOINT: "https://eth-hardhat.blockscout.com"
  # DOCKER_TAG:
  ETHEREUM_JSONRPC_VARIANT: "geth"
  ETHEREUM_JSONRPC_HTTP_URL: "http://l2geth-svc:8545"
  # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL:
  DATABASE_URL: "postgresql://postgres:postgres@postgresql-svc:5432/local"
  ETHEREUM_JSONRPC_TRACE_URL: "http://l2geth-svc:8545"
  # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL:
  # ETHEREUM_JSONRPC_HTTP_TIMEOUT:
  NETWORK:
  SUBNETWORK: "Titan Goerli"
  LOGO: "/images/titan_testnet_logo.svg"
  SHOW_TESTNET_LABEL: "false"
  TESTNET_LABEL_TEXT: "HardHat"
  PERMANENT_LIGHT_MODE_ENABLED: "true"
  ETHEREUM_JSONRPC_WS_URL: "ws://l2geth-svc:8546"
  ETHEREUM_JSONRPC_TRANSPORT: "http"
  ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES: "false"
  IPC_PATH:
  NETWORK_PATH: "/"
  # BLOCKSCOUT_HOST: "explorer.local.tokamak.network"
  # BLOCKSCOUT_PROTOCOL: "https"
  SECRET_KEY_BASE: "O7oyZMEIDfd0uPsQwy6k8xtXchXHngWB3vWVcWuN2diIsOwTsqLwXnPf78rgurWe"
  # CHECK_ORIGIN:
  PORT: "4000"
  COIN_NAME: "ETH"
  # METADATA_CONTRACT:
  # VALIDATORS_CONTRACT:
  # KEYS_MANAGER_CONTRACT:
  # REWARDS_CONTRACT:
  # TOKEN_BRIDGE_CONTRACT:
  EMISSION_FORMAT: "DEFAULT"
  CHAIN_SPEC_PATH:
  # SUPPLY_MODULE:
  COIN:
  EXCHANGE_RATES_COIN:
  # EXCHANGE_RATES_SOURCE:
  # EXCHANGE_RATES_COINGECKO_COIN_ID:
  # EXCHANGE_RATES_COINGECKO_API_KEY:
  # EXCHANGE_RATES_COINMARKETCAP_API_KEY:
  POOL_SIZE: "0"
  # EXCHANGE_RATES_COINGECKO_PLATFORM_ID:
  # TOKEN_EXCHANGE_RATE_INTERVAL:
  # TOKEN_EXCHANGE_RATE_REFETCH_INTERVAL:
  # TOKEN_EXCHANGE_RATE_MAX_BATCH_SIZE:
  # DISABLE_TOKEN_EXCHANGE_RATE:
  POOL_SIZE_API: "0"
  ECTO_USE_SSL: "false"
  # DATADOG_HOST:
  # DATADOG_PORT:
  # SPANDEX_BATCH_SIZE:
  # SPANDEX_SYNC_THRESHOLD:
  HEART_BEAT_TIMEOUT: "30"
  # HEART_COMMAND:
  BLOCKSCOUT_VERSION: "v5.2.0-beta"
  RELEASE_LINK: "https://github.com/blockscout/blockscout/releases/tag/v5.2.0-beta"
  BLOCK_TRANSFORMER: "clique"
  # GRAPHIQL_TRANSACTION:
  # BLOCK_RANGES:
  # FIRST_BLOCK:
  # LAST_BLOCK:
  # TRACE_FIRST_BLOCK:
  # TRACE_LAST_BLOCK:
  # FOOTER_CHAT_LINK:
  # FOOTER_FORUM_LINK_ENABLED:
  # FOOTER_FORUM_LINK:
  # FOOTER_TELEGRAM_LINK_ENABLED:
  # FOOTER_TELEGRAM_LINK:
  # FOOTER_GITHUB_LINK:
  FOOTER_LOGO: "/images/tokamak_logo.svg"
  FOOTER_LINK_TO_OTHER_EXPLORERS: "false"
  FOOTER_OTHER_EXPLORERS:
  SUPPORTED_CHAINS:
  CACHE_BLOCK_COUNT_PERIOD: "7200"
  CACHE_TXS_COUNT_PERIOD: "7200"
  CACHE_ADDRESS_SUM_PERIOD: "3600"
  CACHE_TOTAL_GAS_USAGE_PERIOD: "3600"
  CACHE_ADDRESS_TRANSACTIONS_GAS_USAGE_COUNTER_PERIOD: "1800"
  CACHE_TOKEN_HOLDERS_COUNTER_PERIOD: "3600"
  CACHE_TOKEN_TRANSFERS_COUNTER_PERIOD: "3600"
  CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL: "1800"
  CACHE_AVERAGE_BLOCK_PERIOD: "1800"
  CACHE_MARKET_HISTORY_PERIOD: "21600"
  CACHE_ADDRESS_TRANSACTIONS_COUNTER_PERIOD: "1800"
  CACHE_ADDRESS_TOKENS_USD_SUM_PERIOD: "1800"
  CACHE_ADDRESS_TOKEN_TRANSFERS_COUNTER_PERIOD: "1800"
  TOKEN_METADATA_UPDATE_INTERVAL: "172800"
  CONTRACT_VERIFICATION_ALLOWED_SOLIDITY_EVM_VERSIONS: homestead,tangerineWhistle,spuriousDragon,byzantium,constantinople,petersburg,istanbul,berlin,london,paris,shanghai,default
  CONTRACT_VERIFICATION_ALLOWED_VYPER_EVM_VERSIONS: byzantium,constantinople,petersburg,istanbul,berlin,paris,shanghai,default
  # CONTRACT_VERIFICATION_MAX_LIBRARIES: 10
  CONTRACT_MAX_STRING_LENGTH_WITHOUT_TRIMMING: "2040"
  # CONTRACT_DISABLE_INTERACTION:
  UNCLES_IN_AVERAGE_BLOCK_TIME: "false"
  DISABLE_WEBAPP: "false"
  API_V1_READ_METHODS_DISABLED: "false"
  API_V1_WRITE_METHODS_DISABLED: "false"
  DISABLE_INDEXER: "false"
  DISABLE_REALTIME_INDEXER: "false"
  INDEXER_DISABLE_TOKEN_INSTANCE_REALTIME_FETCHER: "false"
  INDEXER_DISABLE_TOKEN_INSTANCE_RETRY_FETCHER: "false"
  INDEXER_DISABLE_TOKEN_INSTANCE_SANITIZE_FETCHER: "false"
  INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER: "true"
  INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER: "false"
  # INDEXER_CATCHUP_BLOCKS_BATCH_SIZE:
  # INDEXER_CATCHUP_BLOCKS_CONCURRENCY:
  # INDEXER_CATCHUP_BLOCK_INTERVAL:
  # INDEXER_INTERNAL_TRANSACTIONS_BATCH_SIZE:
  # INDEXER_INTERNAL_TRANSACTIONS_CONCURRENCY:
  # INDEXER_BLOCK_REWARD_BATCH_SIZE:
  # INDEXER_BLOCK_REWARD_CONCURRENCY:
  # INDEXER_TOKEN_INSTANCE_RETRY_REFETCH_INTERVAL:
  # INDEXER_TOKEN_INSTANCE_RETRY_CONCURRENCY:
  # INDEXER_TOKEN_INSTANCE_REALTIME_CONCURRENCY:
  # INDEXER_TOKEN_INSTANCE_SANITIZE_CONCURRENCY:
  # INDEXER_COIN_BALANCES_BATCH_SIZE:
  # INDEXER_COIN_BALANCES_CONCURRENCY:
  # INDEXER_RECEIPTS_BATCH_SIZE:
  # INDEXER_RECEIPTS_CONCURRENCY:
  # INDEXER_TOKEN_BALANCES_BATCH_SIZE:
  # INDEXER_TX_ACTIONS_ENABLE:
  # INDEXER_TX_ACTIONS_MAX_TOKEN_CACHE_SIZE:
  # INDEXER_TX_ACTIONS_REINDEX_FIRST_BLOCK:
  # INDEXER_TX_ACTIONS_REINDEX_LAST_BLOCK:
  # INDEXER_TX_ACTIONS_REINDEX_PROTOCOLS:
  # INDEXER_TX_ACTIONS_AAVE_V3_POOL_CONTRACT:
  # INDEXER_REALTIME_FETCHER_MAX_GAP:
  # INDEXER_FETCHER_INIT_QUERY_LIMIT:
  # INDEXER_DISABLE_WITHDRAWALS_FETCHER:
  # WITHDRAWALS_FIRST_BLOCK:
  # INDEXER_OPTIMISM_L1_RPC:
  # INDEXER_OPTIMISM_L1_BATCH_START_BLOCK:
  # INDEXER_OPTIMISM_L1_BATCH_INBOX:
  # INDEXER_OPTIMISM_L1_BATCH_SUBMITTER:
  # INDEXER_OPTIMISM_L1_BATCH_BLOCKS_CHUNK_SIZE:
  # INDEXER_OPTIMISM_L1_PORTAL_CONTRACT:
  # INDEXER_OPTIMISM_L1_OUTPUT_ROOTS_START_BLOCK:
  # INDEXER_OPTIMISM_L1_OUTPUT_ORACLE_CONTRACT:
  # INDEXER_OPTIMISM_L1_WITHDRAWALS_START_BLOCK:
  # INDEXER_OPTIMISM_L2_WITHDRAWALS_START_BLOCK:
  # INDEXER_OPTIMISM_L2_MESSAGE_PASSER_CONTRACT:
  # INDEXER_OPTIMISM_L1_DEPOSITS_START_BLOCK:
  # INDEXER_OPTIMISM_L1_DEPOSITS_BATCH_SIZE:
  # TOKEN_ID_MIGRATION_FIRST_BLOCK:
  # TOKEN_ID_MIGRATION_CONCURRENCY:
  # TOKEN_ID_MIGRATION_BATCH_SIZE:
  # INDEXER_INTERNAL_TRANSACTIONS_TRACER_TYPE:
  # WEBAPP_URL:
  # API_URL:
  SHOW_ADDRESS_MARKETCAP_PERCENTAGE: "true"
  CHECKSUM_ADDRESS_HASHES: "true"
  CHECKSUM_FUNCTION: "eth"
  DISABLE_EXCHANGE_RATES: "true"
  TXS_STATS_ENABLED: "true"
  SHOW_PRICE_CHART: "false"
  SHOW_PRICE_CHART_LEGEND: "false"
  SHOW_TXS_CHART: "true"
  TXS_HISTORIAN_INIT_LAG: "0"
  TXS_STATS_DAYS_TO_COMPILE_AT_INIT: "40"
  COIN_BALANCE_HISTORY_DAYS: "90"
  APPS_MENU: "true"
  EXTERNAL_APPS:
  # GAS_PRICE:
  # RESTRICTED_LIST:
  # RESTRICTED_LIST_KEY:
  SHOW_MAINTENANCE_ALERT: "false"
  MAINTENANCE_ALERT_MESSAGE:
  SOURCIFY_INTEGRATION_ENABLED: "false"
  SOURCIFY_SERVER_URL:
  SOURCIFY_REPO_URL:
  CHAIN_ID: "5050"
  MAX_SIZE_UNLESS_HIDE_ARRAY: "50"
  HIDE_BLOCK_MINER: "false"
  DISPLAY_TOKEN_ICONS: "false"
  SHOW_TENDERLY_LINK: "false"
  TENDERLY_CHAIN_PATH:
  RE_CAPTCHA_SECRET_KEY: "6LcbRY0nAAAAAAV1LMpCseCbzqMtmFtb0VR7yGEl"
  RE_CAPTCHA_CLIENT_KEY: "6LcbRY0nAAAAANSCFL5ecoZwKzXgLOecmxe2FIbY"
  RE_CAPTCHA_V3_SECRET_KEY:
  RE_CAPTCHA_V3_CLIENT_KEY:
  RE_CAPTCHA_DISABLED: "false"
  JSON_RPC:
  # API_RATE_LIMIT_DISABLED: "true"
  API_RATE_LIMIT_TIME_INTERVAL: "1s"
  API_RATE_LIMIT_BY_IP_TIME_INTERVAL: "5m"
  API_RATE_LIMIT: "50"
  API_RATE_LIMIT_BY_KEY: "50"
  API_RATE_LIMIT_BY_WHITELISTED_IP: "50"
  API_RATE_LIMIT_WHITELISTED_IPS:
  API_RATE_LIMIT_STATIC_API_KEY:
  API_RATE_LIMIT_UI_V2_WITH_TOKEN: "5"
  API_RATE_LIMIT_BY_IP: "3000"
  # API_RATE_LIMIT_HAMMER_REDIS_URL: redis://redis-svc.redis:6379
  # API_RATE_LIMIT_IS_BLOCKSCOUT_BEHIND_PROXY: "false"
  API_RATE_LIMIT_UI_V2_TOKEN_TTL_IN_SECONDS: "18000"
  FETCH_REWARDS_WAY: "trace_block"
  MICROSERVICE_SC_VERIFIER_ENABLED: "true"
  MICROSERVICE_SC_VERIFIER_URL: "http://smart-contract-verifier-svc:8050/"
  MICROSERVICE_SC_VERIFIER_TYPE: "sc_verifier"
  MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS: "10m"
  MICROSERVICE_VISUALIZE_SOL2UML_ENABLED: "true"
  MICROSERVICE_VISUALIZE_SOL2UML_URL: "http://visualizer-svc:8050/"
  MICROSERVICE_SIG_PROVIDER_ENABLED: "true"
  MICROSERVICE_SIG_PROVIDER_URL: "http://sig-provider-svc:8050/"
  DECODE_NOT_A_CONTRACT_CALLS: "true"
  # DATABASE_READ_ONLY_API_URL:
  # ACCOUNT_DATABASE_URL:
  # ACCOUNT_POOL_SIZE:
  # ACCOUNT_AUTH0_DOMAIN:
  # ACCOUNT_AUTH0_CLIENT_ID:
  # ACCOUNT_AUTH0_CLIENT_SECRET:
  # ACCOUNT_PUBLIC_TAGS_AIRTABLE_URL:
  # ACCOUNT_PUBLIC_TAGS_AIRTABLE_API_KEY:
  # ACCOUNT_SENDGRID_API_KEY:
  # ACCOUNT_SENDGRID_SENDER:
  # ACCOUNT_SENDGRID_TEMPLATE:
  ACCOUNT_CLOAK_KEY:
  ACCOUNT_ENABLED: "false"
  # ACCOUNT_REDIS_URL:
  # MIXPANEL_TOKEN:
  # MIXPANEL_URL:
  # AMPLITUDE_API_KEY:
  # AMPLITUDE_URL:
  EIP_1559_ELASTICITY_MULTIPLIER: "2"
  # API_SENSITIVE_ENDPOINTS_KEY:
  # ACCOUNT_VERIFICATION_EMAIL_RESEND_INTERVAL:
