testdata/explorer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blockscout
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  tls:
    - hosts:
        - explorer-1-5.titond-holesky.tokamak.network
  rules:
  - host: explorer-1-5.titond-holesky.tokamak.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blockscout-svc
            port:
              number: 80
